--- a/src/resources/styles/styles/foundation/utilities.scss
+++ b/src/resources/styles/styles/foundation/utilities.scss
@@ -1,5 +1,3 @@
-@use 'sass:math';
-
 $default-browser-font-size: 16px;
 $base-font-size: 10px;
 
@@ -13,9 +11,9 @@ $base-font-size: 10px;
   @if $unit == 'rem' {
     @return $value;
   } @else if $unit == 'px' {
-    @return math.div($value, $default-browser-font-size * 1rem)
+    @return  $value / $base-font-size * 1rem;
   } @else if $unit == 'em' {
-    @return math.div($unit, 1em * 1rem);
+    @return $unit / 1em * 1rem;
   } @else {
     @error 'Value must be in px, em, or rem.';
   }
@@ -31,9 +29,9 @@ $base-font-size: 10px;
   @if $unit == 'px' {
     @return $value;
   } @else if $unit == 'em' {
-    @return math.div($value, 1em) * $base-font-size;
+    @return ($value / 1em) * $base-font-size;
   } @else if $unit == 'rem' {
-    @return math.div($value, 1rem) * $base-font-size;
+    @return ($value / 1rem) * $base-font-size;
   } @else {
     @error 'Value must be in rem, em, or px.';
   }
@@ -50,9 +48,9 @@ $base-font-size: 10px;
   @if $unit == 'em' {
     @return $value;
   } @else if $unit == 'rem' {
-    @return math.div($value, 1rem) * 1em * (math.div($base-font-size, $default-browser-font-size));
+    @return $value / 1rem * 1em * ($base-font-size / $default-browser-font-size);
   } @else if $unit == 'px' {
-    @return math.div($value, $default-browser-font-size) * 1em;
+    @return $value / $default-browser-font-size * 1em;
   } @else {
     @error 'Value must be in px, rem, or em.';
   }
