--- a/src/resources/styles/styles/shared/buttons.scss
+++ b/src/resources/styles/styles/shared/buttons.scss
@@ -3,7 +3,8 @@
   $active-color: darken($button-color, 15%);
 
   background: linear-gradient(to bottom, lighten($button-color, 2%), darken($button-color, 2%));
-  border-color: $border-color;
+  //border-color: $border-color;
+  border-color: transparent;
   box-shadow:
     inset 0 1px 0 0 lighten($button-color, 3%),
     shadow(faint),
@@ -12,7 +13,8 @@
 
   &:hover {
     background: linear-gradient(to bottom, $button-color, darken($button-color, 5%));
-    border-color: $border-color;
+    //border-color: $border-color;
+      border-color: transparent;
     color: color(white);
     text-decoration: none;
   }
@@ -38,10 +40,13 @@
 @mixin button-filled-disabled($button-color) {
   @include recolor-icon(color(white));
   // Transition gradient to gradient to avoid flicker
-  background: linear-gradient(to bottom, lighten($button-color, 25%), lighten($button-color, 25%));
-  border-color: lighten($button-color, 20%);
+  //background: linear-gradient(to bottom, lighten($button-color, 25%), lighten($button-color, 25%));
+  background: #f1f1f1;
+  //border-color: lighten($button-color, 20%);
+  border-color: transparent;
   box-shadow: none;
-  color: color(white);
+  //color: color(white);
+  color: #8c9196;
 }
 
 @mixin button-outline($outline-color) {
