--- a/src/resources/styles/styles/components.scss
+++ b/src/resources/styles/styles/components.scss
@@ -15,6 +15,7 @@
 @import 'components/Collapsible';
 @import 'components/ColorPicker';
 @import 'components/Connected';
+@import 'components/DataTable';
 @import 'components/DatePicker';
 @import 'components/DescriptionList';
 @import 'components/DisplayText';
