Fix moving scss over to math.div

--- a/src/resources/styles/styles/components/ActionList.scss
+++ b/src/resources/styles/styles/components/ActionList.scss
@@ -1,6 +1,7 @@
+@use 'sass:math';
 $image-size: rem(20px);
 $item-min-height: rem(40px);
-$item-vertical-padding: ($item-min-height - line-height(body)) / 2;
+$item-vertical-padding:math.div(($item-min-height - line-height(body)), 2);
 
 .Polaris-ActionList {
   list-style: none;
