--- a/src/resources/styles/styles/components/ProgressBar.scss
+++ b/src/resources/styles/styles/components/ProgressBar.scss
@@ -1,7 +1,8 @@
+@use 'sass:math';
 @function progress-bar-height($height: base) {
   $base: 16px;
   $data: (
-    small: rem($base / 2),
+    small: rem(math.div($base, 2)),
     base: rem($base),
     large: rem($base * 2),
   );
