--- a/src/resources/styles/styles/shared/controls.scss
+++ b/src/resources/styles/styles/shared/controls.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 @function control-height() {
   @return rem(36px);
 }
@@ -7,7 +8,7 @@
 }
 
 @function control-vertical-padding() {
-  @return (control-height() - line-height(input) - rem(2px)) / 2;
+  @return math.div((control-height() - line-height(input) - rem(2px)), 2);
 }
 
 @function control-icon-transition() {
