--- a/src/resources/styles/styles/components/Breadcrumbs.scss
+++ b/src/resources/styles/styles/components/Breadcrumbs.scss
@@ -1,4 +1,5 @@
-$vertical-padding: (control-height() - line-height(body)) / 2;
+@use "sass:math";
+$vertical-padding: math.div((control-height() - line-height(body)), 2);
 $horizontal-padding: spacing(tight);
 $icon-size: rem(20px);
 
