--- a/src/resources/styles/styles/components/DatePicker.scss
+++ b/src/resources/styles/styles/components/DatePicker.scss
@@ -1,3 +1,4 @@
+@use "sass:math";
 $stacking-order: (
   in-range: 20,
   selected: 30,
@@ -44,7 +45,7 @@ $in-range-border-color: #9ca6de;
 .Polaris-DatePicker__Day {
   display: block;
   flex: 1 0 0%;
-  width: (100% / 7);
+  width: (math.div(100%, 7));
   margin: 0;
   padding: spacing(tight);
   background: transparent;
