--- a/src/resources/styles/styles/global.scss
+++ b/src/resources/styles/styles/global.scss
@@ -1,3 +1,4 @@
+@use 'sass:math';
 html,
 body {
   @include text-style-body;
@@ -8,7 +9,7 @@ body {
 html {
   position: relative;
   box-sizing: border-box;
-  font-size: ($base-font-size / $default-browser-font-size) * 100%;
+  font-size: (math.div($base-font-size, $default-browser-font-size)) * 100%;
   -webkit-font-smoothing: antialiased;
 
   // This needs to come after -webkit-font-smoothing
