Add the file drop zone

--- a/src/resources/styles/styles/components.scss
+++ b/src/resources/styles/styles/components.scss
@@ -55,3 +55,4 @@
 @import 'components/Thumbnail';
 @import 'components/Tooltip';
 @import 'components/VisuallyHidden';
+@import "components/PolarisDropZone";
