--- a/src/resources/styles/styles/components/Button.scss
+++ b/src/resources/styles/styles/components/Button.scss
@@ -1,5 +1,5 @@
 @use "sass:math";
-$min-height: control-height();
+$min-height: control-slim-height();
 $vertical-padding: math.div(($min-height - line-height(body) - rem(2px)), 2);
 $slim-min-height: rem(30px);
 $slim-vertical-padding:  math.div(($slim-min-height - line-height(body) - rem(2px)),  2);
@@ -16,11 +16,11 @@ $spinner-size: rem(20px);
   min-height: $min-height;
   min-width: $min-height;
   margin: 0;
-  padding: $vertical-padding spacing();
+  padding: 6px 12px;;
   background: linear-gradient(to bottom, color(white), color(sky, lighter));
   border: border(dark);
   box-shadow: shadow(faint);
-  border-radius: border-radius();
+  border-radius: border-radius(large);
   line-height: 1;
   color: color(ink);
   text-align: center;
