--- a/src/resources/styles/styles/foundation/colors.scss
+++ b/src/resources/styles/styles/foundation/colors.scss
@@ -30,7 +30,7 @@ $color-palette-data: (
     green: (
         lighter: #e3f1df,
         light: #bbe5b3,
-        base: #50b83c,
+        base: #29845a,
         dark: #108043,
         darker: #173630,
         text: #414f3e
@@ -46,7 +46,7 @@ $color-palette-data: (
     orange: (
         lighter: #fcebdb,
         light: #ffc58b,
-        base: #f49342,
+        base: #ffb800,
         dark: #c05717,
         darker: #4a1504,
         text: #594430
@@ -54,7 +54,7 @@ $color-palette-data: (
     red: (
         lighter: #fbeae5,
         light: #fead9a,
-        base: #ed6347,
+        base: #e51c00,
         dark: #bf0711,
         darker: #330101,
         text: #583c35
@@ -70,7 +70,7 @@ $color-palette-data: (
     teal: (
         lighter: #e0f5f5,
         light: #b7ecec,
-        base: #47c1bf,
+        base: #91d0ff,
         dark: #00848e,
         darker: #003135,
         text: #405352
